Bug tracker at http://code.google.com/p/psutil/issues

0.3.1 - XXXX-XX-XX
------------------

NEW FEATURES

BUGFIXES

 * Issue 188: psutil import error on Linux ARM architectures.


0.3.0 - 2011-07-08
------------------

NEW FEATURES

 * Issue 125: system per-cpu percentage utilization and times.
 * Issue 163: per-process associated terminal (TTY).
 * Issue 171: added get_phymem() and get_virtmem() functions returning system
   memory information (total, used, free) and memory percent usage.
   total_* avail_* and used_* memory functions are deprecated.
 * Issue 172: disk usage statistics.
 * Issue 174: mounted disk partitions.
 * Issue 179: setuptools is now used in setup.py

BUGFIXES

 * Issue 159: SetSeDebug() does not close handles or unset impersonation on
   return.
 * Issue 164: wait function raises a TimeoutException when a process returns
   -1 (Windows).
 * Issue 165: process.status raises an unhandled exception.
 * Issue 166: get_memory_info() leaks handles hogging system resources.
 * Issue 168: psutil.cpu_percent() returns erroneous results when used in
   non-blocking mode.  (patch by Philip Roberts)
 * Issue 178: OSX - Process.get_threads() leaks memory
 * Issue 180: Windows - Process's get_num_threads() and get_threads() methods
   can raise NoSuchProcess exception while process still exists.


0.2.1 - 2011-03-20
------------------

NEW FEATURES

 * Issue 64: per-process I/O counters.
 * Issue 116: per-process wait() (wait for process to terminate and return its
   exit code).
 * Issue 134: per-process get_threads() returning information (id, user and
   kernel times) about threads opened by process.
 * Issue 136: process executable path on FreeBSD is now determined by asking
   the kernel instead of guessing it from cmdline[0].
 * Issue 137: per-process real, effective and saved user and group ids.
 * Issue 140: system boot time.
 * Issue 142: per-process get and set niceness (priority).
 * Issue 143: per-process status.